--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nbachaingame",
-  "homepage": "https://2aleksandar3.github.io/nbaChainGame/",
+  "homepage": "https://2Aleksandar3.github.io/NBAChainGame/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
