--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.7",
     "dotenv": "^16.4.7",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.5"
